<resources>
    <string name="app_name" translatable="false">What to Wear</string>

    <!-- Strings related to login -->
    <string name="prompt_username" translatable="false">Username</string>
    <string name="prompt_password" translatable="false">Password (optional)</string>
    <string name="action_sign_in" translatable="false">Sign in</string>
    <string name="action_register" translatable="false">Register</string>
    <string name="action_sign_in_short" translatable="false">Sign in</string>
    <string name="error_invalid_username" translatable="false">This username is too short (must be at least 4 characters)</string>
    <string name="invalid_email" translatable="false">Email is not in right format</string>
    <string name="error_invalid_password" translatable="false">This password is too short</string>
    <string name="error_incorrect_password" translatable="false">This password is incorrect</string>
    <string name="error_field_required" translatable="false">This field is required</string>
    <string name="permission_rationale" translatable="false">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="prefs" translatable="false">Preferences</string>
    <string name="design_prefs" translatable="false">Design Preferences:</string>
    <string name="store_prefs" translatable="false">Store Preferences:</string>
    <string name="pw" translatable="false">Password:</string>
    <string name="show_items_in_closet_only" translatable="false">Only show items in my closet</string>
    <string name="temp_pref" translatable="false">Set Temperature Preference:</string>
    <string name="save_changes" translatable="false">Save Changes</string>
    <string name="cancel" translatable="false">Cancel</string>
    <string name="username" translatable="false">User Name:</string>
    <string name="email" translatable="false">Email:</string>
    <string name="action_settings" translatable="false">Action Settings</string>
    <string name="title_activity_preferences" translatable="false">Account Page</string>

    <!-- ClosetActivity-->
    <string name="title_activity_closet" translatable="false">Closet</string>
    <string name="closet_add" translatable="false">Add clothing item</string>
    <string name="closet_shoes" translatable="false">Shoes</string>
    <string name="closet_pants" translatable="false">Pants</string>
    <string name="closet_tshirt" translatable="false">T-Shirt</string>
    <string name="closet_jacket" translatable="false">Jacket</string>
    <string name="closet_shirt" translatable="false">Shirt</string>

    <!--Add ClosetActivity Item-->
    <string name="title_activity_add__closet__item_">Add Item</string>
    <string name="closet_item_picture">Select Picture</string>
    <string name="closet_item_add">Add</string>
    <string name="closet_item_type_prompt">Type</string>
    <string name="closet_item_subType_prompt">Sub-Type</string>
    <string name="closet_item_color_prompt">Color</string>
    <string name="closet_item_store_prompt">Store Bought</string>

    <string-array name="closet_item_type_array">
        <item>Shoes</item>
        <item>Pants</item>
        <item>T-Shirt</item>
        <item>Jacket</item>
        <item>Shirt</item>
    </string-array>

    <string-array name="closet_item_subType_array">
        <item>None</item>
    </string-array>

    <string-array name="closet_item_subTypePants_array">
        <item>Athletic Shorts</item>
        <item>Chino Shorts</item>
        <item>Jean Pants</item>
        <item>Dress Pants</item>
        <item>Chino Pants</item>
        <item>Athletic Pants</item>
    </string-array>

    <string-array name="closet_item_subTypeShoes_array">
        <item>Sandals</item>
        <item>Sneakers</item>
        <item>Dress Shoes</item>
        <item>Athletic Shoes</item>
        <item>Boots</item>
    </string-array>

    <string-array name="closet_item_color_array">
        <item>Light Brown</item>
        <item>Dark Brown</item>
        <item>Red</item>
        <item>Pink</item>
        <item>Orange</item>
        <item>Yellow</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Purple</item>
        <item>White</item>
        <item>Light Grey</item>
        <item>Dark Grey</item>
        <item>Black</item>
    </string-array>

    <string-array name="closet_item_store_array">
        <item>Unknown</item>
        <item>Macys</item>
        <item>JC Penny</item>
        <item>Nordstrom</item>
        <item>Nike</item>
        <item>Gap</item>
        <item>Forever 21</item>
        <item>Old Navy</item>
        <item>American Eagle</item>
        <item>Aeropostle</item>
        <item>Holister</item>
        <item>Urban Outfitters</item>
        <item>H&amp;M</item>
        <item>UNIQLO</item>
        <item>Abercrombie &amp; Fitch</item>
        <item>Victorias Secret</item>
        <item>Dillards</item>
    </string-array>


    <!-- New Users Page-->
    <string name="new_users">New Users</string>
    <string name="user_name">User Name:</string>
    <string name="password">Password:</string>
    <string name="design_pref">Design Preference:</string>
    <string name="store_pref">Store Preference:</string>
    <string name="prompt_email">Email (optional)</string>

    <string-array name="design_array">
        <item>Athletic</item>
        <item>Hippy</item>
        <item>Casual</item>
        <item>Hipster</item>
        <item>Don\'t Care</item>
        <item>Professional</item>
    </string-array>

    <string-array name="store_array">
        <item>No Preference</item>
        <item>H&amp;M</item>
        <item>Zara</item>
        <item>Nike</item>
        <item>Adidas</item>
        <item>ASOS</item>
    </string-array>

    <string name="register">Register</string>

    <!--Menu-Page-->
    <string name="home">Home</string>
    <string name="calender">Calendar</string>
    <string name="closet">Closet</string>
    <string name="account">Account</string>
    <string name="logOut">Log Out</string>
    <!--Permissions-->

    <string name="title_location_permission">Location service Required for weather</string>
    <string name="text_location_permission">Location service needs to be enabled for weather</string>
    <string name="ok">Okay</string>

    <!-- Event List Page-->
    <string name="event_list_text">Your Events:</string>

    <!-- Add Event Page -->
    <string name="event_name">Event Name:</string>
    <string name="event_category_text">Event Category:</string>
    <string name="add_event">Save</string>
    <string name="add_event_cancel">Cancel</string>

    <string-array name="event_categories">
        <item>Casual</item>
        <item>Professional</item>
        <item>Business Casual</item>
        <item>Romantic</item>
        <item>Athletic</item>
    </string-array>

</resources>
