<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    >

    <TimePicker
        android:id="@+id/add_event_timepicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:headerBackground="@color/colorPrimary"
        android:numbersSelectorColor="@color/colorPrimary" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/event_name"/>

        <EditText
            android:id="@+id/add_event_name_edittext"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:singleLine="true" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/event_category_text"/>

        <Spinner
            android:id="@+id/add_event_category_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:summary="Change your design preference"
            android:title="@string/event_category_text"
            android:entries="@array/event_categories"
            android:entryValues="@array/event_categories" />

    </LinearLayout>

    <Button
        android:id="@+id/add_event_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:background="@drawable/button"
        />

    <Button
        android:id="@+id/add_event_cancel_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_event_cancel"
        android:background="@drawable/button"
        />
</LinearLayout>

